# Create-Intro-Cards

./: .buildinfo  .gitignore  LICENSE.txt  README.md  create_intro_cards.html  create_intro_cards.py  format-test-and-build-docs.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js
.github/workflows/: ci.yml
_sources/: create_intro_cards.rst.txt  index.rst.txt
_static/css/: theme-overrides.css
docs/source/: conf.py  create_intro_cards.rst
tests/: test_create_intro_cards.py  test_people_data.csv
