[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create-intro-cards"
version = "0.1.0"
description = """A Python module to generate a PDF of intro cards from a dataset of individuals' attributes."""
authors = [{name = "Bobby Math"}]
license = {file = "LICENSE.txt"}
dependencies = [
    "numpy>=1.26.1",
    "pandas>=2.1.2",
    "matplotlib>=3.8.1",
    "Pillow>=10.1.0",
    "ipykernel>=6.29.5"
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics"
]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["introductions", "intro", "cards", "matplotlib", "pdf", "visualization"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "black",
    "docformatter>=1.7.5",
    "Sphinx>=7.2.6",
    "pypdf>=5"
]

[project.urls]
Homepage = "https://www.github.com/robertfmath/Create-Intro-Cards"
Documentation = "https://robertfmath.github.io/Create-Intro-Cards"

[tool.docformatter]
black = true
force-wrap = true
in-place = true
