[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create-intro-cards"
version = "1.0.2"
description = """Convert a dataset of individuals' names, photos, and custom attributes into a PDF of “intro cards” that describe each individual."""
authors = [{name = "Bobby Math"}]
license = {file = "LICENSE.txt"}
dependencies = [
    "numpy>=1.26.1",
    "pandas>=2.1.2",
    "matplotlib>=3.8.1",
    "Pillow>=10.1.0",
    "ipykernel>=6.29.5"
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics"
]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["introductions", "intro", "cards", "matplotlib", "pdf", "visualization"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.9",
    "docformatter>=1.7.5",
    "Sphinx>=7.2.6",
    "pypdf>=5",
    "typing_extensions>=4.6"
]

[project.urls]
Homepage = "https://www.github.com/robertfmath/Create-Intro-Cards"
Documentation = "https://robertfmath.github.io/Create-Intro-Cards"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.docformatter]
black = true
force-wrap = true
in-place = true
